Design tablet view. Little tweaks on small mobile view to ensure consistent design. Delete unnecessary properties repeated in tablet and laptop views

--- a/styles/home/hero-section.css
+++ b/styles/home/hero-section.css
@@ -2,6 +2,7 @@
   /* transition: all 200ms ease; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .hero-section {
@@ -21,6 +22,7 @@
 .right-hero-sec img {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .left-hero-sec {
@@ -32,6 +34,7 @@
 .left-hero-sec h1 {
   font: 900 normal 45px /1.5 'fredoka';
   margin-bottom: calc(2vw - 5px);
+  margin-top: 5px;
   text-align: center;
 }
 
@@ -42,7 +45,7 @@
 .left-hero-sec h5 {
   font-weight: 400;
   font-size: 15px;
-  margin: 0px 5px;
+  padding: 0px 5px;
 }
 
 .left-hero-sec h5 a {
@@ -62,58 +65,59 @@
 @media only screen and (min-width: 600px) {
   .hero-section {
     height: 80vh;
+    flex-direction: row;
+    border: 6px solid rgb(15, 57, 144);
+  }
+
+  .left-hero-sec {
+    flex: 3;
+    padding-left: 10px;
+    justify-content: space-between;
+  }
+
+  .left-hero-sec h1 {
+    font: 900 normal 60px /1.7 'fredoka';
+    margin-top: 25px;
+    margin-bottom: 10px;
+  }
+
+  .left-hero-sec h5 {
+    font-size: 16px;
+    margin: 25px 0px;
+  }
+
+  .left-hero-sec .brand-button {
+    margin: 0px auto 10px auto;
+    width: 200px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .hero-section {
     margin: 0px 10px 200px 10px;
     flex-direction: row;
     border: 4px solid rgb(15, 57, 144);
   }
 
-  .right-hero-sec {
-    flex: 2;
-  }
-
-  .right-hero-sec img {
-    height: 100%;
-    width: 100%;
-  }
-
   .left-hero-sec {
-    flex: 3;
     padding-left: 20px;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
   }
 
   .left-hero-sec h1 {
-    font: 900 normal 80px 'fredoka';
+    font-size: 80px;
+    line-height: normal;
     margin-top: 35px;
     margin-bottom: 20px;
   }
 
-  .left-hero-sec h1 span {
-    text-decoration: overline;
-  }
-
   .left-hero-sec h5 {
-    font-weight: 400;
     font-size: 23px;
     margin: 25px 0px;
-  }
-
-  .left-hero-sec h5 a {
-    font-weight: 700;
-    transition: all 200ms ease;
-  }
-
-  .left-hero-sec h5 a:hover {
-    color: rgba(15, 58, 144, 0.5);
   }
 
   .left-hero-sec .brand-button {
     margin-bottom: 40px;
     width: 400px;
   }
-}
-
-@media only screen and (min-width: 769px) {
 }
